Дошли руки переделать на нормальную архитектуру. Добавил S3 и добавил возможность отправки медиа файлов

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi
 pydantic
+pydantic_settings
 jinja2
 python-multipart
 asyncpg
@@ -7,3 +8,4 @@ alembic
 sqlalchemy
 uvicorn
 aiohttp
+aiobotocore
