--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,38 @@
-fastapi
-pydantic
-pydantic_settings
-jinja2
-python-multipart
-asyncpg
-alembic
-sqlalchemy
-uvicorn
-aiohttp
-aiobotocore
+aiobotocore==2.15.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.8
+aioitertools==0.12.0
+aiosignal==1.3.1
+alembic==1.13.3
+annotated-types==0.7.0
+anyio==4.6.0
+asyncpg==0.29.0
+attrs==24.2.0
+botocore==1.35.23
+click==8.1.7
+colorama==0.4.6
+fastapi==0.115.0
+frozenlist==1.4.1
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+Jinja2==3.1.4
+jmespath==1.0.1
+Mako==1.3.5
+MarkupSafe==2.1.5
+multidict==6.1.0
+pydantic==2.9.2
+pydantic-settings==2.5.2
+pydantic_core==2.23.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.12
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.35
+starlette==0.38.6
+typing_extensions==4.12.2
+urllib3==2.2.3
+uvicorn==0.31.0
+wrapt==1.16.0
+yarl==1.13.1
